--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<link rel="stylesheet" href="assets/css/bootsnav.css" >	
         
         <!--style.css-->
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         
         <!--responsive.css-->
         <link rel="stylesheet" href="assets/css/responsive.css">
