Update index.html 11-2-24

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="My Profile Pic.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Anushtha Jain</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#contact" class="email"><i class="bi bi-envelope"></i></a>
@@ -88,11 +88,6 @@
           <p>Beyond the digital realm, I have a sweet spot for the delightful world of baking. Originally from Delhi, I proudly graduated from the University of Delhi. Immersing myself in books is my favorite pastime, while music and pizza are my trusted companions.</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>My Professional Journey</h3>
             <p>
               I am Content Creator with over 3 years of rich experience. My professional journey commenced during my college days with an internship for an American Automobile website where I served as a ghostwriter, penning around 150 articles, ranging from in-depth analyses to feature-specific pieces. This early exposure laid the foundation for my passion in content creation.</p>
@@ -102,6 +97,12 @@
           
             <p>
               Currently, I'm a vital part of the dynamic team at Visure Solutions, contributing to various facets of our digital presence. Beyond content creation, my role extends to graphic design coordination, event marketing, social media management, email marketing, and more. Navigating a fast-paced environment with strict deadlines has been a constant in my career, refining my ability to thrive under pressure. </p>
+
+              <div class="row">
+                <div class="col-lg-4" data-aos="fade-right">
+                  <img src="Annual Website Traffic April 2022 - January 2023.png" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 
               <p>A notable achievement at Visure is the substantial growth in website traffic, escalating from 12,000 in April 2022 to over 72,000 in January 2023. This accomplishment underscores my commitment to driving tangible results in every professional endeavor.
             </p>
@@ -116,12 +117,10 @@
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
-      <div class="row">
+      <div class="container">
 
         <div class="section-title">
           <h2>My Skills</h2>
-        </div>
-        <div class="col-lg-6">
           <h3>Technical Skills</h3>
           <li>B2B Marketing</li>
           <li>Webpage Management</li>
@@ -136,7 +135,7 @@
           <li>Public Relation</li>
         </div>
         
-        <div class="col-lg-6">
+        <div class="container">
           <h3>Soft Skills</h3>
           <li>Multitasker</li>
           <li>Punctual</li>
@@ -145,6 +144,7 @@
           <li>Flexible</li>
           <li>Strong Networking Skills</li>
           <li>Persuasive</li>
+
         </div>
       </div>
     </section><!-- End Skills Section -->
@@ -290,7 +290,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (8).png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project1" title="More Details"><i class="bx bx-link"></i></a>
@@ -300,7 +300,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (7).png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project2" title="More Details"><i class="bx bx-link"></i></a>
@@ -310,7 +310,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (5).png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project3" title="More Details"><i class="bx bx-link"></i></a>
@@ -320,7 +320,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (3).png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project4" title="More Details"><i class="bx bx-link"></i></a>
@@ -330,7 +330,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (6).png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project5" title="More Details"><i class="bx bx-link"></i></a>
