Update portfolio-details.html 11-2-24

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -61,6 +61,7 @@
           <li><a href="#project3" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 3</span></a></li>
           <li><a href="#project4" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 4</span></a></li>
           <li><a href="#project5" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 5</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -94,7 +95,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div>
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (8).png" alt="Banner1">
                 </div>
 
               </div>
@@ -128,7 +129,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div>
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (7).png" alt="Banner2">
                 </div>
 
               </div>
@@ -148,105 +149,108 @@
               <button> <a href="https://visuresolutions.com/blog/automotive/aspice/" target="_blank">Check Out Now</a></button>
             </div>
           </div>
-          <br>
-          <div class="container" id="project3">
+        </div>
+      </div>
+      <br>
+      <div class="container" id="project3">
 
-            <div class="row gy-4">
+        <div class="row gy-4">
 
-              <div class="col-lg-8">
-                <div class="portfolio-details-slider swiper">
-                  <div class="swiper-wrapper align-items-center">
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
 
-                    <div>
-                      <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
-                    </div>
-
-                  </div>
-                  <div class="swiper-pagination"></div>
+                <div>
+                  <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (5).png" alt="Banner3">
                 </div>
+
               </div>
-
-              <div class="col-lg-4">
-                <div class="portfolio-info">
-                  <h3>Project 3</h3>
-                  <h4>AI-Driven Requirements Management</h4>
-                </div>
-                <div class="portfolio-description">
-                  <p>
-                    Exploring the uncharted territory of AI-driven requirements management was both thrilling and challenging. In a world captivated by AI's prowess in marketing and other domains, delving into its application in requirements management added an extra layer of excitement. The task wasn't just about deciphering complex algorithms but about grasping the subtleties of a relatively unexplored field. Unraveling the intricacies of newly integrated features in the tool demanded a deep dive into the intersection of artificial intelligence and project essentials. It was a journey of discovery, navigating uncharted waters to unravel the potential of AI in reshaping how requirements are managed.
-                  </p>
-                  <button> <a href="https://www.linkedin.com/feed/update/urn:li:activity:7077927798157320192/?utm_source=share&utm_medium=member_desktop" target="_blank">Check Out Now</a></button>
-                </div>
-              </div>
-          </div>
-          <br>
-          <div class="container" id="project4">
-
-            <div class="row gy-4">
-
-              <div class="col-lg-8">
-                <div class="portfolio-details-slider swiper">
-                  <div class="swiper-wrapper align-items-center">
-
-                    <div>
-                      <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
-                    </div>
-
-                  </div>
-                  <div class="swiper-pagination"></div>
-                </div>
-              </div>
-
-              <div class="col-lg-4">
-                <div class="portfolio-info">
-                  <h3>Project 4</h3>
-                  <h4>Oil and Gas Requirements Checklist</h4>
-                </div>
-                <div class="portfolio-description">
-                  <p>
-                    Composing the "Oil and Gas Requirements Checklist" white paper was an intricate journey filled with unique challenges. Navigating the complexities of the highly regulated and sensitive oil and gas industry demanded meticulous attention to detail. Delving into the podcast featuring Geoffrey Cann, conducted by my team, provided invaluable insights. The wealth of knowledge gleaned from this interview laid a solid foundation for the whitepaper. Understanding the intricacies of compliance, safety, and operational needs within the industry was no small feat, but armed with newfound insights, I embarked on the task, weaving together a comprehensive checklist that caters to the refined demands of this vital sector.
-                  </p>
-                  <button> <a href="https://visuresolutions.com/blog/whitepaper/oil-and-gas-requirements-checklist/" target="_blank">Check Out Now</a></button>
-                </div>
-          </div>
-          <br>
-          <div class="container" id="project5">
-
-            <div class="row gy-4">
-
-              <div class="col-lg-8">
-                <div class="portfolio-details-slider swiper">
-                  <div class="swiper-wrapper align-items-center">
-
-                    <div>
-                      <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
-                    </div>
-
-                  </div>
-                  <div class="swiper-pagination"></div>
-                </div>
-              </div>
-
-              <div class="col-lg-4">
-                <div class="portfolio-info">
-                  <h3>Project 5</h3>
-                  <h4>Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann</h4>
-                </div>
-                <div class="portfolio-description">
-                  <p>
-                    Fabricating the podcast article on "Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann" posed a unique set of hurdles. The oil and gas sector, with its intricate regulations and sensitivity, presented a substantial challenge. As the creator of this article, I undertook the challenging task of distilling the key insights from the webinar recording into a compelling written piece. My primary objective was to provide a tantalizing glimpse into the valuable content discussed during the webinar, aiming to pique the readers' curiosity and encourage them to watch the recording for the full experience.
-                  </p>
-                  <button> <a href="https://visuresolutions.com/podcast/agile-product-development-and-cyberecurity-in-oil-and-gas/" target="_blank">Check Out Now</a></button>
-                </div>
+              <div class="swiper-pagination"></div>
+            </div>
           </div>
 
+          <div class="col-lg-4">
+            <div class="portfolio-info">
+              <h3>Project 3</h3>
+              <h4>AI-Driven Requirements Management</h4>
+            </div>
+            <div class="portfolio-description">
+              <p>
+                Exploring the uncharted territory of AI-driven requirements management was both thrilling and challenging. In a world captivated by AI's prowess in marketing and other domains, delving into its application in requirements management added an extra layer of excitement. The task wasn't just about deciphering complex algorithms but about grasping the subtleties of a relatively unexplored field. Unraveling the intricacies of newly integrated features in the tool demanded a deep dive into the intersection of artificial intelligence and project essentials. It was a journey of discovery, navigating uncharted waters to unravel the potential of AI in reshaping how requirements are managed.
+              </p>
+              <button> <a href="https://www.linkedin.com/feed/update/urn:li:activity:7077927798157320192/?utm_source=share&utm_medium=member_desktop" target="_blank">Check Out Now</a></button>
+            </div>
+          </div>
+      </div>
+    </div>
+    <br>
+    <div class="container" id="project4">
+
+      <div class="row gy-4">
+
+        <div class="col-lg-8">
+          <div class="portfolio-details-slider swiper">
+            <div class="swiper-wrapper align-items-center">
+
+              <div>
+                <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (3).png" alt="Banner4">
+              </div>
+
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
         </div>
 
+        <div class="col-lg-4">
+          <div class="portfolio-info">
+            <h3>Project 4</h3>
+            <h4>Oil and Gas Requirements Checklist</h4>
+          </div>
+          <div class="portfolio-description">
+            <p>
+              Composing the "Oil and Gas Requirements Checklist" white paper was an intricate journey filled with unique challenges. Navigating the complexities of the highly regulated and sensitive oil and gas industry demanded meticulous attention to detail. Delving into the podcast featuring Geoffrey Cann, conducted by my team, provided invaluable insights. The wealth of knowledge gleaned from this interview laid a solid foundation for the whitepaper. Understanding the intricacies of compliance, safety, and operational needs within the industry was no small feat, but armed with newfound insights, I embarked on the task, weaving together a comprehensive checklist that caters to the refined demands of this vital sector.
+            </p>
+            <button> <a href="https://visuresolutions.com/blog/whitepaper/oil-and-gas-requirements-checklist/" target="_blank">Check Out Now</a></button>
+          </div>
+        </div>
       </div>
+    </div>
+    <br>
+    <div class="container" id="project5">
+
+      <div class="row gy-4">
+
+        <div class="col-lg-8">
+          <div class="portfolio-details-slider swiper">
+            <div class="swiper-wrapper align-items-center">
+
+              <div>
+                <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (6).png" alt="Banner5">
+              </div>
+
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="portfolio-info">
+            <h3>Project 5</h3>
+            <h4>Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann</h4>
+          </div>
+          <div class="portfolio-description">
+            <p>
+              Fabricating the podcast article on "Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann" posed a unique set of hurdles. The oil and gas sector, with its intricate regulations and sensitivity, presented a substantial challenge. As the creator of this article, I undertook the challenging task of distilling the key insights from the webinar recording into a compelling written piece. My primary objective was to provide a tantalizing glimpse into the valuable content discussed during the webinar, aiming to pique the readers' curiosity and encourage them to watch the recording for the full experience.
+            </p>
+            <button> <a href="https://visuresolutions.com/podcast/agile-product-development-and-cyberecurity-in-oil-and-gas/" target="_blank">Check Out Now</a></button>
+          </div>
+        </div>
+      </div>
+    </div>
     </section><!-- End Portfolio Details Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -265,7 +269,7 @@
 
               <br>
 
-              <div class="LinkedIn">
+              <div class="email">
                 <a href = "https://www.linkedin.com/in/anushtha-jain-b7b6b5182/" target="_blank"><i class="bi bi-phone"></i></a>
                 <a href = "https://www.linkedin.com/in/anushtha-jain-b7b6b5182/" target="_blank"><h4>LinkedIn</h4></a>
               </div>
