Update index.html 11-2-24

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
               <br>
 
-              <div class="LinkedIn">
+              <div class="email">
                 <a href = "https://www.linkedin.com/in/anushtha-jain-b7b6b5182/" target="_blank"><i class="bi bi-phone"></i></a>
                 <a href = "https://www.linkedin.com/in/anushtha-jain-b7b6b5182/" target="_blank"><h4>LinkedIn</h4></a>
               </div>
