--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <div class="social-links mt-3 text-center">
           <a href="#contact" class="email"><i class="bi bi-envelope"></i></a>
           <a href="#contact" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/anushtha-jain" class="linkedin"><i class="bi bi-github"></i></a>
         </div>
       </div>
 
@@ -71,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Anushtha Jain</h1>
-      <p>I'm <span class="typed" data-typed-items="Content Creator, Freelancer, Designer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Content Creator, Freelancer, Designer"></span></p>
     </div>
   </section><!-- End Hero -->
 
