Portfolio details page

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,11 +46,12 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Anushtha Jain</a></h1>
+        <img src="assets-portfolio/My Profile Pic.png" alt="" class="img-fluid rounded-circle">
+        <!-- <h1 class="text-light"><a href="index.html">Anushtha Jain</a></h1> -->
         <div class="social-links mt-3 text-center">
           <a href="#contact" class="email"><i class="bi bi-envelope"></i></a>
           <a href="#contact" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/anushtha-jain" class="linkedin"><i class="bi bi-github"></i></a>
         </div>
       </div>
 
@@ -61,7 +62,7 @@
           <li><a href="#project3" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 3</span></a></li>
           <li><a href="#project4" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 4</span></a></li>
           <li><a href="#project5" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 5</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -74,7 +75,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Details</h2>
+          <h2>Work Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfolio Details</li>
@@ -90,12 +91,12 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-3">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div>
-                  <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (8).png" alt="Banner1">
+                  <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (8).png" alt="Banner1">
                 </div>
 
               </div>
@@ -103,7 +104,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-9">
             <div class="portfolio-info">
               <h3>Project 1</h3>
               <h4>DO-178C Guide: Introduction to RTCA DO-178 Certification</h4>
@@ -112,7 +113,7 @@
               <p>
                 Developing the DO-178C Guide was no small task. Rooted in extensive research and enriched by insights from my team's experts, it serves as a go-to resource for aviation software development. Navigating the complexities of DO-178C certification, the guide provides practical knowledge, ensuring adherence to industry standards and the safety of airborne software systems. Overcoming challenges included understanding both the industry nuances and the tools addressing industry pain points. This required dedication and perseverance, resulting in a comprehensive guide that simplifies DO-178C certification for professionals in the field.
               </p>
-              <button> <a href="https://visuresolutions.com/do-178-guide/" target="_blank">Check Out Now</a></button>
+              <button class="check-out"> <a href="https://visuresolutions.com/do-178-guide/" target="_blank">Check Out Now</a></button>
             </div>
           </div>
 
@@ -124,12 +125,12 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-3">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div>
-                  <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (7).png" alt="Banner2">
+                  <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (7).png" alt="Banner2">
                 </div>
 
               </div>
@@ -137,7 +138,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-9">
             <div class="portfolio-info">
               <h3>Project 2</h3>
               <h4>ASPICE | Definition, Compliance, Tools, & Certifications</h4>
@@ -146,7 +147,7 @@
               <p>
                 Crafting the article on "ASPICE | Definition, Compliance, Tools, & Certifications" proved to be a challenging yet rewarding experience. Exploring the intricate world of ASPICE (Automotive SPICE) required a deep dive into the realm of automotive software development. Drawing on the insights gained during my internship at an automobile website, I found a solid foundation to demystify some complexities. However, grappling with the nuances of the tools and their precise role in addressing industry pain points posed a formidable challenge. The endeavor was a testament to the learning curve, where each hurdle was an opportunity to enhance my understanding and deliver a more comprehensive narrative.
               </p>
-              <button> <a href="https://visuresolutions.com/blog/automotive/aspice/" target="_blank">Check Out Now</a></button>
+              <button class="check-out"> <a href="assets-portfolio/https://visuresolutions.com/blog/automotive/aspice/" target="_blank">Check Out Now</a></button>
             </div>
           </div>
         </div>
@@ -156,12 +157,12 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-3">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div>
-                  <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (5).png" alt="Banner3">
+                  <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (5).png" alt="Banner3">
                 </div>
 
               </div>
@@ -169,7 +170,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-9">
             <div class="portfolio-info">
               <h3>Project 3</h3>
               <h4>AI-Driven Requirements Management</h4>
@@ -178,7 +179,7 @@
               <p>
                 Exploring the uncharted territory of AI-driven requirements management was both thrilling and challenging. In a world captivated by AI's prowess in marketing and other domains, delving into its application in requirements management added an extra layer of excitement. The task wasn't just about deciphering complex algorithms but about grasping the subtleties of a relatively unexplored field. Unraveling the intricacies of newly integrated features in the tool demanded a deep dive into the intersection of artificial intelligence and project essentials. It was a journey of discovery, navigating uncharted waters to unravel the potential of AI in reshaping how requirements are managed.
               </p>
-              <button> <a href="https://www.linkedin.com/feed/update/urn:li:activity:7077927798157320192/?utm_source=share&utm_medium=member_desktop" target="_blank">Check Out Now</a></button>
+              <button class="check-out"> <a href="https://www.linkedin.com/feed/update/urn:li:activity:7077927798157320192/?utm_source=share&utm_medium=member_desktop" target="_blank">Check Out Now</a></button>
             </div>
           </div>
       </div>
@@ -188,12 +189,12 @@
 
       <div class="row gy-4">
 
-        <div class="col-lg-8">
+        <div class="col-lg-3">
           <div class="portfolio-details-slider swiper">
             <div class="swiper-wrapper align-items-center">
 
               <div>
-                <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (3).png" alt="Banner4">
+                <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (3).png" alt="Banner4">
               </div>
 
             </div>
@@ -201,7 +202,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-9">
           <div class="portfolio-info">
             <h3>Project 4</h3>
             <h4>Oil and Gas Requirements Checklist</h4>
@@ -210,7 +211,7 @@
             <p>
               Composing the "Oil and Gas Requirements Checklist" white paper was an intricate journey filled with unique challenges. Navigating the complexities of the highly regulated and sensitive oil and gas industry demanded meticulous attention to detail. Delving into the podcast featuring Geoffrey Cann, conducted by my team, provided invaluable insights. The wealth of knowledge gleaned from this interview laid a solid foundation for the whitepaper. Understanding the intricacies of compliance, safety, and operational needs within the industry was no small feat, but armed with newfound insights, I embarked on the task, weaving together a comprehensive checklist that caters to the refined demands of this vital sector.
             </p>
-            <button> <a href="https://visuresolutions.com/blog/whitepaper/oil-and-gas-requirements-checklist/" target="_blank">Check Out Now</a></button>
+            <button class="check-out"> <a href="https://visuresolutions.com/blog/whitepaper/oil-and-gas-requirements-checklist/" target="_blank">Check Out Now</a></button>
           </div>
         </div>
       </div>
@@ -220,12 +221,12 @@
 
       <div class="row gy-4">
 
-        <div class="col-lg-8">
+        <div class="col-lg-3">
           <div class="portfolio-details-slider swiper">
             <div class="swiper-wrapper align-items-center">
 
               <div>
-                <img src="Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (6).png" alt="Banner5">
+                <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (6).png" alt="Banner5">
               </div>
 
             </div>
@@ -233,7 +234,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-9">
           <div class="portfolio-info">
             <h3>Project 5</h3>
             <h4>Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann</h4>
@@ -242,7 +243,7 @@
             <p>
               Fabricating the podcast article on "Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann" posed a unique set of hurdles. The oil and gas sector, with its intricate regulations and sensitivity, presented a substantial challenge. As the creator of this article, I undertook the challenging task of distilling the key insights from the webinar recording into a compelling written piece. My primary objective was to provide a tantalizing glimpse into the valuable content discussed during the webinar, aiming to pique the readers' curiosity and encourage them to watch the recording for the full experience.
             </p>
-            <button> <a href="https://visuresolutions.com/podcast/agile-product-development-and-cyberecurity-in-oil-and-gas/" target="_blank">Check Out Now</a></button>
+            <button class="check-out"> <a href="https://visuresolutions.com/podcast/agile-product-development-and-cyberecurity-in-oil-and-gas/" target="_blank">Check Out Now</a></button>
           </div>
         </div>
       </div>
@@ -250,7 +251,7 @@
     </section><!-- End Portfolio Details Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact section-bg">
+    <!-- section id="contact" class="contact section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -280,7 +281,7 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section --><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
