Update index.html 11-2-24

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <img src="assets-portfolio/My Profile Pic.png" alt="" class="img-fluid rounded-circle">
         <!-- <h1 class="text-light"><a href="index.html">Anushtha Jain</a></h1> -->
         <div class="social-links mt-3 text-center">
-          <a href="#contact" class="email"><i class="bi bi-envelope"></i></a>
-          <a href="#contact" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="anushtha.jain1080@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/anushtha-jain-b7b6b5182/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/anushtha-jain" class="linkedin"><i class="bi bi-github"></i></a>
         </div>
       </div>
