--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <div class="portfolio-wrap">
               <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (8).png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (8).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project1" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -303,7 +303,7 @@
             <div class="portfolio-wrap">
               <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (7).png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (7).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project2" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -313,7 +313,7 @@
             <div class="portfolio-wrap">
               <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (5).png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (5).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project3" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -323,7 +323,7 @@
             <div class="portfolio-wrap">
               <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (3).png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (3).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 4"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project4" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -333,7 +333,7 @@
             <div class="portfolio-wrap">
               <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (6).png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (6).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 5"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project5" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
