--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- <h1 class="text-light"><a href="index.html">Anushtha Jain</a></h1> -->
         <div class="social-links mt-3 text-center">
           <a href="mailto:anushtha.jain1080@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/anushtha-jain-b7b6b5182/" class="linkedin" target="_blank><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/anushtha-jain-b7b6b5182/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/anushtha-jain" class="linkedin" target="_blank"><i class="bi bi-github"></i></a>
         </div>
       </div>
