--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -106,7 +106,7 @@
 
           <div class="col-lg-9">
             <div class="portfolio-info">
-              <h3>Project 1</h3>
+              <h3>Website Guide</h3>
               <h4>DO-178C Guide: Introduction to RTCA DO-178 Certification</h4>
             </div>
             <div class="portfolio-description">
@@ -140,7 +140,7 @@
 
           <div class="col-lg-9">
             <div class="portfolio-info">
-              <h3>Project 2</h3>
+              <h3>Website Article</h3>
               <h4>ASPICE | Definition, Compliance, Tools, & Certifications</h4>
             </div>
             <div class="portfolio-description">
@@ -172,7 +172,7 @@
 
           <div class="col-lg-9">
             <div class="portfolio-info">
-              <h3>Project 3</h3>
+              <h3>LinkedIn Article</h3>
               <h4>AI-Driven Requirements Management</h4>
             </div>
             <div class="portfolio-description">
@@ -204,7 +204,7 @@
 
         <div class="col-lg-9">
           <div class="portfolio-info">
-            <h3>Project 4</h3>
+            <h3>White Paper</h3>
             <h4>Oil and Gas Requirements Checklist</h4>
           </div>
           <div class="portfolio-description">
@@ -236,7 +236,7 @@
 
         <div class="col-lg-9">
           <div class="portfolio-info">
-            <h3>Project 5</h3>
+            <h3>Podcast Article</h3>
             <h4>Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann</h4>
           </div>
           <div class="portfolio-description">
