--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -57,11 +57,11 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#project1" class="nav-link scrollto active"><i class="bx bx-file"></i> <span>Project 1</span></a></li>
-          <li><a href="#project2" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 2</span></a></li>
-          <li><a href="#project3" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 3</span></a></li>
-          <li><a href="#project4" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 4</span></a></li>
-          <li><a href="#project5" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Project 5</span></a></li>
+          <li><a href="#project1" class="nav-link scrollto active"><i class="bx bx-file"></i> <span>Website Guide</span></a></li>
+          <li><a href="#project2" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Website Article</span></a></li>
+          <li><a href="#project3" class="nav-link scrollto"><i class="bx bx-file"></i> <span>LinkedIn Article</span></a></li>
+          <li><a href="#project4" class="nav-link scrollto"><i class="bx bx-file"></i> <span>White Paper</span></a></li>
+          <li><a href="#project5" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Podcast Article</span></a></li>
           <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
