--- a/index.html
+++ b/index.html
@@ -289,53 +289,63 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-2 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (8).png" class="img-fluid" alt="" width="220px" height="700px">
-              <div class="portfolio-links">
+              <a href="portfolio-details.html#project1">
+                <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (8).png" class="img-fluid" alt="" width="220px" height="700px">
+              </a>
+              <!-- <div class="portfolio-links">
                 <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (8).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project1" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
+              </div> -->
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-2 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (7).png" class="img-fluid" alt="" width="220px" height="700px">
-              <div class="portfolio-links">
+              <a href="portfolio-details.html#project2">
+                <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (7).png" class="img-fluid" alt="" width="220px" height="700px">
+              </a>
+              <!-- <div class="portfolio-links">
                 <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (7).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project2" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
+              </div> -->
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-2 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (5).png" class="img-fluid" alt="" width="220px" height="700px">
-              <div class="portfolio-links">
+              <a href="portfolio-details.html#project3" title="More Details">
+                <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (5).png" class="img-fluid" alt="" width="220px" height="700px">
+              </a>
+              <!-- <div class="portfolio-links">
                 <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (5).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project3" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
+              </div> -->
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-2 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (3).png" class="img-fluid" alt="" width="220px" height="700px">
-              <div class="portfolio-links">
+              <a href="portfolio-details.html#project4">
+                <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (3).png" class="img-fluid" alt="" width="220px" height="700px">
+              </a>
+              <!-- <div class="portfolio-links">
                 <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (3).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 4"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project4" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
+              </div> -->
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-2 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (6).png" class="img-fluid" alt="" width="220px" height="700px">
-              <div class="portfolio-links">
+              <a href="portfolio-details.html#project5">
+                <img src="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (6).png" class="img-fluid" alt="" width="220px" height="700px">
+              </a>
+              <!-- <div class="portfolio-links">
                 <a href="assets-portfolio/Agile Product Development & Cybersecurity and Risk Challenges in the Oil, Gas & Energy Industry with Geoffrey Cann (6).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 5"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html#project5" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
+              </div> -->
             </div>
           </div>
 
