--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -52,7 +52,7 @@
           <a href="mailto:anushtha.jain1080@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
           <a href="https://www.linkedin.com/in/anushtha-jain-b7b6b5182/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/anushtha-jain" class="linkedin" target="_blank"><i class="bi bi-github"></i></a>
-          <a href="skype:cid.b6b3c5f6658901c" class="linkedin" target="_blank"><i class="bi bi-skype"></i></a>
+          <a href="skype:https://join.skype.com/invite/wEVXshjWBFfC" class="linkedin" target="_blank"><i class="bi bi-skype"></i></a>
         </div>
       </div>
 
