--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <ul>
                 <li><b>Webpage Management:</b> I fully manage, publish, edit, and create webpages on WordPress and Elementor, along with implementing Schema markup.</li>
                 <li><b>Content Creation:</b> I create various forms of content, both long and short, such as articles, blogs, ebooks, whitepapers, PRs, and guides. Additionally, I optimize existing content to improve its performance.</li>
-                <li><b></b>Copywriting:</b> I craft compelling headlines and Call To Action copy, collaborating closely with the Growth Marketer Strategist.</li>
+                <li><b>Copywriting:</b> I craft compelling headlines and Call To Action copy, collaborating closely with the Growth Marketer Strategist.</li>
                 <li><b>Email Marketing:</b> I actively participate in the entire email marketing process, including campaign planning, content creation, list management, and performance analysis.</li>
                 <li><b>Social Media Management:</b> I single-handedly manage all the social media platforms, creating and scheduling posts, engaging with the audience, and monitoring analytics.</li>
                 <li><b>Graphic Design Coordination:</b> I collaborate with the graphic designer to create visually appealing and informative content assets like images, banners, PDFs, thumbnails, etc.</li>
