--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <h3>My Professional Journey</h3>
             <p>
-              I am Content Creator with over 3 years of rich experience. My professional journey commenced during my college days with an internship for an American Automobile website where I served as a ghostwriter, penning around 150 articles, ranging from in-depth analyses to feature-specific pieces. This early exposure laid the foundation for my passion in content creation.</p>
+              I am Content Creator with over 4 years of rich experience. My professional journey commenced during my college days with an internship for an American Automobile website where I served as a ghostwriter, penning around 150 articles, ranging from in-depth analyses to feature-specific pieces. This early exposure laid the foundation for my passion in content creation.</p>
 
               <p>Embracing a fast-paced environment with strict deadlines has been a consistent theme in my career. I've expanded my horizons beyond content creation, having served as a WordPress Developer in various roles. During my tenure with The Research Pedia I single-handedly managed 4 client websites and crafted over 130 web pages using WordPress CMS including creating images using Canva.
             </p>
@@ -208,7 +208,7 @@
             <div class="resume-item pb-0">
               <h4>Content Creator</h4>
               <h5>Sept 21 - present</h5>
-              <p><em>I have been working as a Content Creator for more than two years, where my primary responsibilities encompass content creation, email marketing, social media management, and more. Here is a summary of my current job responsibilities:</em></p>
+              <p><em>I have been working as a Content Creator for more than three years, where my primary responsibilities encompass content creation, email marketing, social media management, and more. Here is a summary of my current job responsibilities:</em></p>
               <ul>
                 <li><b>Webpage Management:</b> I fully manage, publish, edit, and create webpages on WordPress and Elementor, along with implementing Schema markup.</li>
                 <li><b>Content Creation:</b> I create various forms of content, both long and short, such as articles, blogs, ebooks, whitepapers, PRs, and guides. Additionally, I optimize existing content to improve its performance.</li>
